[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Maps/DeliveryDestination/DeliveryDestination.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Maps/DetectTile.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 121.759, 118.872 )

[node name="DeliveryDestination" type="Area2D"]
script = ExtResource( 1 )

[node name="Building" type="Node2D" parent="."]

[node name="Demon" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectTile" parent="." instance=ExtResource( 2 )]

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -27.5419
margin_top = 71.2497
margin_right = 23.4581
margin_bottom = 85.2497
text = "House"
align = 1

[node name="ScanTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="RevealTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="timeout" from="ScanTimer" to="." method="_on_ScanTimer_timeout"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]
[connection signal="timeout" from="RevealTimer" to="." method="_on_RevealTimer_timeout"]
